# django-dto-field

./: .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml  typing_and_lint.yml
benchmarks/: jsonfield_benchmark.py
src/django_dict_field/: __init__.py  dict_field.py  params_field.py  serializer.py
src/django_dto_field/: dto_field.py  exceptions.py  handler.py  parser.py  registry.py  serializer.py
src/django_dto_field/features/: base.py  serializers.py  validators.py
tests/django_app/dict_field/: apps.py  models.py
tests/django_app/dict_field/migrations/: 0001_initial.py
tests/django_app/dict_field/tests/: test_None_dto_field.py  test_default_dict_field.py  test_dict_dto_field.py
tests/django_app/django_app/: settings.py
tests/django_app/params_field/: models.py  tests.py
tests/django_app/params_field/migrations/: 0001_initial.py
tests/e2e/dict_field/: models.py
tests/e2e/dict_field/management/commands/: benchmark.py
tests/e2e/dict_field/migrations/: 0001_initial.py
tests/e2e/dict_field/tests/: test_dto_field_e2e.py
tests/unit/: test_dict_dto.py  test_dto_handler.py  test_parser.py  test_serializer.py  test_typed_dict_dto.py  test_validators.py
tests/unit/features/: test_base.py  test_serializers.py  test_validators.py
